--- a/template.yml
+++ b/template.yml
@@ -18,6 +18,23 @@ Resources:
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
 
+  OCRStateMachine:
+      Type: AWS::Serverless::StateMachine # More info about State Machine Resource: https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-statemachine.html
+      Properties:
+        DefinitionUri: statemachine/ocr.asl.json
+        DefinitionSubstitutions:
+          helloFromLambdaFunctionArn: !GetAtt helloFromLambdaFunction.Arn
+        Events:
+          HourlyTradingSchedule:
+            Type: Schedule # More info about Schedule Event Source: https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-property-statemachine-schedule.html
+            Properties:
+              Description: Schedule to run the stock trading state machine every hour
+              Enabled: False # This schedule is disabled by default to avoid incurring charges.
+              Schedule: "rate(1 hour)"
+        Policies: # Find out more about SAM policy templates: https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-policy-templates.html
+          - LambdaInvokePolicy:
+              FunctionName: !Ref helloFromLambdaFunction
+
   # This is a Lambda function config associated with the source code: hello-from-lambda.js
   helloFromLambdaFunction:
     Type: AWS::Serverless::Function
